<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="15dp"
    android:background="@color/colorPrimary"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="4dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/login_img"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        android:id="@+id/checkImg"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/login_ask"
        android:layout_marginHorizontal="15dp"
        android:maxWidth="320dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/askTitle"
        android:textSize="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:gravity="center"
        android:maxWidth="320dp"
        android:text="@string/login_ask_info"
        android:textIsSelectable="true"
        android:textColor="@color/plat1"
        android:id="@+id/askContain"
        android:textSize="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="13dp"
        app:cardElevation="0dp"
        android:foreground="@drawable/ripple"
        android:id="@+id/loginBT"
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_google_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Connect via Google"
                android:textColor="@color/google_color"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="17dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>